<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ChampAlertActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/champ_champ_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/pal_III"
            android:labelFor="@id/spChampions"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spChampions"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/champ_where_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/pal_III"
            android:labelFor="@id/spLocation"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spLocation"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/champ_spawn_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/pal_III"
            android:labelFor="@id/llSpawns"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llSpawns"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/champ_spawn_1"
                android:fontFamily="@font/avatar_font"
                android:textColor="@color/pal_II"
                android:tag="0"
                android:onClick="skull_Click"
                android:textSize="@dimen/chaaamp_spawn_text_size"
                android:id="@+id/ivPrimo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/champ_spawn_2"
                android:fontFamily="@font/avatar_font"
                android:textColor="@color/pal_II"
                android:tag="1"
                android:onClick="skull_Click"
                android:textSize="@dimen/chaaamp_spawn_text_size"
                android:id="@+id/ivSecondo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/champ_spawn_3"
                android:fontFamily="@font/avatar_font"
                android:textColor="@color/pal_II"
                android:tag="2"
                android:onClick="skull_Click"
                android:textSize="@dimen/chaaamp_spawn_text_size"
                android:id="@+id/ivTerzo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/champ_spawn_4"
                android:textColor="@color/pal_II"
                android:fontFamily="@font/avatar_font"
                android:tag="3"
                android:onClick="skull_Click"
                android:textSize="@dimen/chaaamp_spawn_text_size"
                android:id="@+id/ivQuarto"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:gravity="center"
                android:text="@string/champ_spawn_out"
                android:textColor="@color/pal_II"
                android:fontFamily="@font/avatar_font"
                android:tag="4"
                android:onClick="skull_Click"
                android:textSize="@dimen/chaaamp_spawn_text_size"
                android:id="@+id/ivFuori"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/champ_whose_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/pal_III"
            android:labelFor="@id/llWhose"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llWhose"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ivWCom"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/champ_faction_com"
                android:fontFamily="@font/avatar_font"
                android:textSize="@dimen/chaaamp_spawn_text_size"
                android:onClick="belongClick"
                android:tag="0"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/champ_faction_min"
                android:fontFamily="@font/avatar_font"
                android:textSize="@dimen/chaaamp_spawn_text_size"
                android:onClick="belongClick"
                android:id="@+id/ivWMin"
                android:tag="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/champ_faction_sl"
                android:fontFamily="@font/avatar_font"
                android:textSize="@dimen/chaaamp_spawn_text_size"
                android:onClick="belongClick"
                android:id="@+id/ivWSL"
                android:tag="2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/champ_faction_tb"
                android:fontFamily="@font/avatar_font"
                android:textSize="@dimen/chaaamp_spawn_text_size"
                android:onClick="belongClick"
                android:id="@+id/ivWTB"
                android:tag="3"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/champ_raidedby_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/pal_III"
            android:labelFor="@id/llRaiders"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llRaiders"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ivRCom"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/champ_faction_com"
                android:fontFamily="@font/avatar_font"
                android:textSize="@dimen/chaaamp_spawn_text_size"
                android:onClick="raiderClick"
                android:tag="0"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/champ_faction_min"
                android:fontFamily="@font/avatar_font"
                android:textSize="@dimen/chaaamp_spawn_text_size"
                android:id="@+id/ivRMin"
                android:onClick="raiderClick"
                android:tag="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/champ_faction_sl"
                android:fontFamily="@font/avatar_font"
                android:textSize="@dimen/chaaamp_spawn_text_size"
                android:id="@+id/ivRSL"
                android:onClick="raiderClick"
                android:tag="2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/champ_faction_tb"
                android:fontFamily="@font/avatar_font"
                android:textSize="@dimen/chaaamp_spawn_text_size"
                android:id="@+id/ivRTB"
                android:onClick="raiderClick"
                android:tag="3"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/champ_report_btn"
            android:layout_gravity="center"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:theme="@style/FlatButtonStyle"
            android:textColor="@color/pal_II"
            android:background="@drawable/button_behavior"/>
    </LinearLayout>
</ScrollView>