<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_username_label"
        android:textColor="@color/pal_III"
        android:labelFor="@id/etUsername"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:layout_gravity="center"
        android:hint="@string/hint_register_username"
        android:textColor="@color/pal_II"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_password_label"
        android:textColor="@color/pal_III"
        android:labelFor="@id/etPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/etPassword"
        android:layout_gravity="center"
        android:textColor="@color/pal_II"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:id="@+id/tvFieldError"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_label"
        android:onClick="loginOnClick"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:theme="@style/FlatButtonStyle"
        android:textColor="@color/pal_II"
        android:background="@drawable/button_behavior"/>


</LinearLayout>
