<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.uodreams.tmgutils.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tvWelcome"
        android:layout_gravity="center_vertical"
        android:textColor="#FFF"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textSize="25sp"
        android:layout_weight="25"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_weight="20"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnShowSops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_soptable"
            android:layout_marginBottom="5dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:theme="@style/FlatButtonStyle"
            android:textColor="@color/pal_II"
            android:background="@drawable/button_behavior"/>
        <Button
            android:id="@+id/btnMyRequests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_my_requests"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:theme="@style/FlatButtonStyle"
            android:textColor="@color/pal_II"
            android:background="@drawable/button_behavior"/>
        <Button
            android:id="@+id/btnAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_account"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:theme="@style/FlatButtonStyle"
            android:textColor="@color/pal_II"
            android:background="@drawable/button_behavior"/>

        <Button
            android:id="@+id/btnChamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_champ"
            android:layout_marginTop="5dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:theme="@style/FlatButtonStyle"
            android:textColor="@color/pal_II"
            android:background="@drawable/button_behavior"/>

    </LinearLayout>
</LinearLayout>
